--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,8 +41,8 @@ body::before {
 }
 
 .mIcon{
-  width: 32px;
-  height: 32px;
+  /* width: 32px; */
+  height: 34px;
   border-radius: 6px;
   background-color: #040404;
   color: var(--text-main);
@@ -124,8 +124,8 @@ body::before {
 }
 .ylw{
   --text-main: #FFCC1D !important; 
-  --text-2: #460b1d !important;
-  --text-3: #006124 !important ;
+  --text-2: #705d00 !important;
+  --text-3: #c9bb00 !important ;
   --text-4: #979700 !important;
 }
 /* FFCC1D */
@@ -342,7 +342,47 @@ h1, h2, h3, h4, h5, h6 {
   .navbar ul {
     display: none;
   }
+  .customNav{
+    display: flex !important;
+  }
+  
 }
+@media (min-width: 991px) {
+
+  .customNav{
+    display: none !important;
+  }
+  
+}
+.customNav{
+  margin-top: -25px;
+  display: none;
+}
+.unDisplay{
+  display: none !important;
+}
+.display{
+  display: flex !important;
+}
+.customNav a {
+  font-size: 18px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: rgba(216, 216, 216, 0.1);
+  color: #fff;
+  line-height: 1;
+  margin-right: 8px;
+  border-radius: 30%;
+  width: 40px;
+  height: 40px;
+}
+.customNav a:hover {
+  background: var(--text-main);
+  text-decoration: none;
+  color: #ffff;
+}
+
 .navbar-mobile {
   position: fixed;
   overflow: hidden;
@@ -879,7 +919,8 @@ section .container {
   transition: 0.3s;
 }
 .portfolio .portfolio-wrap .portfolio-links a:hover {
-  color: #63eda3;
+  /* color: #63eda3; */
+  color: var(--text-2);
 }
 .portfolio .portfolio-wrap:hover::before {
   top: 0;
@@ -906,6 +947,7 @@ section .container {
 .portfolio-details {
   padding-top: 40px;
   background: rgba(0, 0, 0, 0.8);
+  /* background: var(--text-2); */
   position: fixed;
   left: 0;
   right: 0;
@@ -1126,8 +1168,8 @@ section .container {
 @media (max-width: 992px) {
   .credits {
     text-align: center;
-    padding: 10px;
-    background: rgba(0, 0, 0, 0.8);
+    /* padding: 10px;
+    background: rgba(0, 0, 0, 0.8); */
   }
 }
 .credits a {
