--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -741,6 +741,7 @@ section .container {
   background: rgba(204, 204, 204, 0.1);
   padding: 80px 20px;
   transition: all ease-in-out 0.3s;
+  width: 100%;
 }
 .services .icon-box .icon {
   margin: 0 auto;
