--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -897,7 +897,10 @@ section .container {
 .portfolio .portfolio-wrap .portfolio-info p {
   color: #ffffff;
   font-size: 14px;
-  text-transform: uppercase;
+  text-transform: capitalize;
+  max-width: 80%;
+  font-weight: 600;
+  font-family: "Raleway", sans-serif;
   padding: 0;
   margin: 0;
 }
